# Master-Thesis-Cpp

./: README.md  ssh_key.txt
cpp_examples/cmake/performance_evaluation/: helloworld.cpp
cpp_examples/cmake/vrep_interface_tests/joint_velocity_commands/: CMakeLists.txt
cpp_examples/cmake/vrep_interface_tests/joint_velocity_commands/data/: me_traj.txt  x_traj.txt
cpp_examples/cmake/vrep_interface_tests/joint_velocity_commands/include/: FrankaRobot.h  admittance_controller.h  dq2tfm.h  geomJac.h  geom_jacobian.h  jacobianEst.h  jacobianEstVector.h  logmap.h  manipulabilityJacobian.h  manipulability_qp_controller.h  spd2vec.h  spdToVec.h  test.h  tmprod.h
cpp_examples/cmake/vrep_interface_tests/joint_velocity_commands/include/franka_analytical_ik-main/: franka_ik_He.hpp
cpp_examples/cmake/vrep_interface_tests/joint_velocity_commands/src/: FrankaRobot.cpp  admittance_controller.cpp  dq2tfm.cpp  geom_jacobian.cpp  jacobianEst.cpp  jacobianEstVector.cpp  jacobianest.cpp  joint_velocity_commands.cpp  logmap.cpp  manipulabilityJacobian.cpp  manipulability_qp_controller.cpp  redManipulabilityJacobian.cpp  spd2vec .cpp  spdToVec.cpp  test.cpp  test_thread_controller.cpp  tmprod.cpp
joint_velocity_commands/: CMakeLists.txt
joint_velocity_commands/data/: dq_traj.txt  plot_csv.m  q_traj.txt  real_bin.m  x_traj.txt
joint_velocity_commands/data/csv/: dq_traj.csv  q_traj.csv  x_t_tack.csv  x_t_traj.csv
joint_velocity_commands/include/: manipulability_qp_controller.h
joint_velocity_commands/src/: FrankaRobot.cpp  jacobianEstVector.cpp  manipulability_qp_controller.cpp  test_thread_controller.cpp
